removing ChatMessage.message from json dict as it's already present in .value

--- a/vcweb/bound/templates/bound/participate.html
+++ b/vcweb/bound/templates/bound/participate.html
@@ -39,7 +39,7 @@
                 <div id='chat-div'>
                     <div class='chat-messages' data-bind='foreach: chatMessages'>
                         <i class='icon-user muted'></i> <strong data-bind='text: participant_number'></strong>
-                        <small><i class='icon-double-angle-right'></i></small> <span data-bind='text: message'></span>
+                        <small><i class='icon-double-angle-right'></i></small> <span data-bind='text: value'></span>
                         <br>
                     </div>
                 </div>
