--- a/vcweb/core/templates/experimenter/monitor.html
+++ b/vcweb/core/templates/experimenter/monitor.html
@@ -142,7 +142,7 @@
         <div id='experiment-chat-messages' class='scrollable-messages accordion-body collapse'>
             <div class='alert' data-bind='foreach: chatMessages'>
                 <div>
-                    <span data-bind='text: participant_handle'></span>(<span data-bind='text: group'></span>): <strong data-bind='text: message'></strong>
+                    <span data-bind='text: participant_handle'></span>(<span data-bind='text: group'></span>): <strong data-bind='text: value'></strong>
                     <span class='pull-right' data-bind='text: short_date_created'></span>
                 </div>
             </div>
