--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -218,7 +218,7 @@
                             <div class='span6'>
                                 <strong>Participant <span data-bind='text: participant_number'></span></strong>
                                 <p>
-                                <span data-bind='text: message'></span>
+                                <span data-bind='text: value'></span>
                                 </p>
                             </div>
                             <div class='span1'>
