--- a/vcweb/lighterprints/templates/lighterprints/mobile/app/mobile.css
+++ b/vcweb/lighterprints/templates/lighterprints/mobile/app/mobile.css
@@ -2,23 +2,16 @@ body{
 	text-align: left;
 }
 .navbar{
-	padding-left: 20px;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	display: block;
-
-  font-size:25px;
-  font-weight:normal;
+	padding-left: 2px;
+	padding-top: 2px;
+	text-align: left;
+	font-size:20px;
 }
 
 .footerbar{
-	padding-left: 20px;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	display: block;
+	padding-top: 5px;
+	padding-bottom: 5px;
 	text-align:center;
-  	font-size:25px;
-  	font-weight:normal;
 }
 .innerblock{
 	padding-left: 10px;
@@ -27,7 +20,7 @@ body{
 }
 .innerleft{
 	text-align:left;
-	padding-left: 10px;
+	padding-left: 2px;
 	padding-right: 10px;
 	padding-top: 10px;
 	padding-bottom: 10px;
@@ -35,4 +28,18 @@ body{
 }
 .innerbutton{
 	text-align:left;
+}
+#popupPanel-popup {
+    left: 0 !important;
+    right: auto !important;
+}
+#popupPanel {
+    width: 200px;
+    border: 1px solid #000;
+    border-right: none;
+    background: rgba(0,0,0,.5);
+    margin: -1px 0;
+}
+#popupPanel .ui-btn {
+    margin: 2em 15px;
 }
