--- a/vcweb/lighterprints/templates/lighterprints/mobile/index.html
+++ b/vcweb/lighterprints/templates/lighterprints/mobile/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="//ajax.aspnetcdn.com/ajax/jquery.mobile/1.3.0/jquery.mobile.structure-1.3.0.min.css" />
         <link rel="stylesheet" href="{% static 'css/lighterprints/font-awesome/jqm-icon-pack-3.0.0-fa.css' %}"/>
         <link rel="stylesheet" href="{% static 'css/lighterprints/icons.css' %}" />
-        <link rel="stylesheet" href="{% static 'css/lighterprints/style.css' %}"/>
+        <link rel="stylesheet" href="{% static 'css/lighterprints/mobile/style.css' %}"/>
         {% with jquery_version="1.8.3" %}
         <script src='//ajax.googleapis.com/ajax/libs/jquery/{{jquery_version}}/jquery.min.js'></script>
         {% endwith %}
