--- a/vcweb/lighterprints/templates/lighterprints/mobile/index.html
+++ b/vcweb/lighterprints/templates/lighterprints/mobile/index.html
@@ -172,7 +172,7 @@
         <!-- /pageloginPage--><!-- Start of #dashboardPage -->
         <div data-role="page" id="dashboardPage" class="ui-responsive-panel">
             <!-- defaultpanel  -->
-            <div data-role="panel" id="defaultpanel" data-theme="b">
+            <div data-role="panel" id="defaultpanel" data-theme="b" data-position="left" data-display="overlay" data-dismissible="true" >
                 <a href="#" data-theme="c" data-role="button" class="innerbutton"><h2><span class="icon-gauge"></span> Dashboard</h2></a>
                 <a href="#challengesPage" data-theme="c" data-role="button" class="innerbutton"><h2><span class="icon-star"></span> Challenges</h2></a>
                 <a href="#myTeamPage" data-theme="c" data-role="button" class="innerbutton"><h2><span class="icon-user"></span> My Team</h2></a>
@@ -277,10 +277,10 @@
                     </div>
                 </div>
             </div>
-             <div data-role="footer" data-position="fixed" data-theme="c">
+             <div data-role="footer" data-theme="c">
                 <div class="ui-bar-b" style="font-size:15px;text-align:center;">
                     <div data-role="controlgroup" data-type="horizontal" data-theme="b">
-                        <a href="#" data-theme="b"> Dashboard</a>
+                        <a href="#"> Dashboard</a>
                         <a href="#challengesPage"> Challenges</a>
                         <a href="#myTeamPage"> My Team</a>
                         <a href="#helpPage"> Help</a>
@@ -295,7 +295,7 @@
         </div>
         <!-- /page dashboardPage--><!-- Start of #dashboardLockedChallengePage -->
         <div data-role="page" id="dashboardLockedChallengePage" class="ui-responsive-panel">
-            <div data-role="panel" id="defaultpanel" data-theme="b">
+            <div data-role="panel" id="defaultpanel" data-theme="b" data-position="left" data-display="overlay" data-dismissible="true" >
                 <a href="#" data-theme="c" data-role="button" class="innerbutton"><h2><span class="icon-gauge"></span> Dashboard</h2></a>
                 <a href="#challengesPage" data-theme="c" data-role="button" class="innerbutton"><h2><span class="icon-star"></span> Challenges</h2></a>
                 <a href="#myTeamPage" data-theme="c" data-role="button" class="innerbutton"><h2><span class="icon-user"></span> My Team</h2></a>
@@ -405,10 +405,10 @@
                     </div>
                 </div>
             </div>
-            <div data-role="footer" data-position="fixed" data-theme="c">
+            <div data-role="footer" data-theme="c">
                 <div class="ui-bar-b" style="font-size:15px;text-align:center;">
                     <div data-role="controlgroup" data-type="horizontal" data-theme="b">
-                        <a href="#" data-theme="b"> Dashboard</a>
+                        <a href="#"> Dashboard</a>
                         <a href="#challengesPage"> Challenges</a>
                         <a href="#myTeamPage"> My Team</a>
                         <a href="#helpPage"> Help</a>
@@ -423,7 +423,7 @@
         </div>
         <!-- /page dashboardLockedChallengePage--><!-- Start of first page: #challengesPage -->
 		<div data-role="page" id="challengesPage" class="ui-responsive-panel">
-            <div data-role="panel" id="defaultpanel" data-theme="b">
+            <div data-role="panel" id="defaultpanel" data-theme="b" data-position="left" data-display="overlay" data-dismissible="true" >
                 <a href="#dashboardPage" data-theme="c" data-role="button" class="innerbutton"><h2><span class="icon-gauge"></span> Dashboard</h2></a>
                 <a href="#" data-theme="c" data-role="button" class="innerbutton"><h2><span class="icon-star"></span> Challenges</h2></a>
                 <a href="#myTeamPage" data-theme="c" data-role="button" class="innerbutton"><h2><span class="icon-user"></span> My Team</h2></a>
@@ -470,7 +470,7 @@
         </div>
         <!-- /page challengesPage--><!-- Start of #lockedChallengePage -->
         <div data-role="page" id="lockedChallengePage" class="ui-responsive-panel">
-            <div data-role="panel" id="defaultpanel" data-theme="b">
+            <div data-role="panel" id="defaultpanel" data-theme="b" data-position="left" data-display="overlay" data-dismissible="true" >
                 <a href="#dashboardPage" data-theme="c" data-role="button" class="innerbutton"><h2><span class="icon-gauge"></span>Dashboard</h2></a>
                 <a href="#" data-theme="c" data-role="button" class="innerbutton"><h2><span class="icon-star"></span>Challenges</h2></a>
                 <a href="#myTeamPage" data-theme="c" data-role="button" class="innerbutton"><h2><span class="icon-user"></span>My Team</h2></a>
@@ -507,7 +507,7 @@
             <div data-role="footer" data-position="fixed" data-theme="c">
                 <div class="ui-bar-b" style="font-size:15px;text-align:center;">
                     <div data-role="controlgroup" data-type="horizontal" data-theme="b">
-                        <a href="#dashboardPage" data-theme="b"> Dashboard</a>
+                        <a href="#dashboardPage"> Dashboard</a>
                         <a href="#"> Challenges</a>
                         <a href="#myTeamPage"> My Team</a>
                         <a href="#helpPage"> Help</a>
@@ -522,7 +522,7 @@
         </div>
         <!-- /page lockedChallengePage--><!-- Start of page: #myTeamPage -->
         <div data-role="page" id="myTeamPage" class="ui-responsive-panel">
-            <div data-role="panel" id="defaultpanel" data-theme="b">
+            <div data-role="panel" id="defaultpanel" data-theme="b" data-position="left" data-display="overlay" data-dismissible="true" >
                 <a href="#dashboardPage" data-theme="c" data-role="button" class="innerbutton"><h2><span class="icon-gauge"></span> Dashboard</h2></a>
                 <a href="#challengesPage" data-theme="c" data-role="button" class="innerbutton"><h2><span class="icon-star"></span> Challenges</h2></a>
                 <a href="#" data-theme="c" data-role="button" class="innerbutton"><h2><span class="icon-user"></span> My Team</h2></a>
@@ -558,10 +558,10 @@
                     </form>
                 </div>
             </div>
-            <div data-role="footer" data-position="fixed" data-theme="c">
+            <div data-role="footer" data-theme="c">
                 <div class="ui-bar-b" style="font-size:15px;text-align:center;">
                     <div data-role="controlgroup" data-type="horizontal" data-theme="b">
-                        <a href="#dashboardPage" data-theme="b"> Dashboard</a>
+                        <a href="#dashboardPage"> Dashboard</a>
                         <a href="#challengesPage"> Challenges</a>
                         <a href="#"> My Team</a>
                         <a href="#helpPage"> Help</a>
@@ -576,7 +576,7 @@
         </div>
         <!-- /page myTeamPage--><!-- Start of page: #helpPage -->
 		 <div data-role="page" id="helpPage" class="ui-responsive-panel">
-            <div data-role="panel" id="defaultpanel" data-theme="b">
+            <div data-role="panel" id="defaultpanel" data-theme="b" data-position="left" data-display="overlay" data-dismissible="true" >
                 <a href="#dashboardPage" data-theme="c" data-role="button" class="innerbutton"><h2><span class="icon-gauge"></span> Dashboard</h2></a>
                 <a href="#challengesPage" data-theme="c" data-role="button" class="innerbutton"><h2><span class="icon-star"></span> Challenges</h2></a>
                 <a href="#myTeamPage" data-theme="c" data-role="button" class="innerbutton"><h2><span class="icon-user"></span> My Team</h2></a>
@@ -657,10 +657,10 @@
                     </ul>
                 </div>
             </div>
-            <div data-role="footer" data-position="fixed" data-theme="c">
+            <div data-role="footer" data-theme="c">
                 <div class="ui-bar-b" style="font-size:15px;text-align:center;">
                     <div data-role="controlgroup" data-type="horizontal" data-theme="b">
-                        <a href="#dashboardPage" data-theme="b"> Dashboard</a>
+                        <a href="#dashboardPage"> Dashboard</a>
                         <a href="#challengesPage"> Challenges</a>
                         <a href="#myTeam"> My Team</a>
                         <a href="#"> Help</a>
