fixed perform activity

--- a/vcweb/lighterprints/templates/lighterprints/mobile/index.html
+++ b/vcweb/lighterprints/templates/lighterprints/mobile/index.html
@@ -23,17 +23,19 @@
         <script>
             $(document).live('pageinit', function(event){
                 var viewModelData = $.parseJSON("{{view_model_json|escapejs}}");
-                globalViewModel = new LighterFootprintsModel(viewModelData);
+                var globalViewModel = new LighterFootprintsModel(viewModelData);
                 ko.applyBindings(globalViewModel);
                 $.mobile.changePage($("#dashboardPage"));
+				
                 $("#submitChatMessage").click(function(event){
                     event.preventDefault();
-                    
+                    if ($('#chatText').val()) {
                     var formData = $('#chat-form').serialize();
                     $.post('http://vcweb.asu.edu/lighterprints/api/message', formData, function(response){
                         if (response.success) {
                             console.debug("successful post - updated view model: ");
                             ko.mapping.fromJS(response.viewModel, globalViewModel);
+							$('#chatMessageList').listview('refresh');
                         }
                         else {
                             console.debug("unable to post message to server");
@@ -41,23 +43,11 @@
                         }
                     });
                     $('#chatText').val('');
+					}
+					else{
+						console.debug("No message found!");
+					}
                 });
-                $("#dashboardPage").bind('pageaftershow', function(event){
-                    $('#challengesList').listview('refresh');
-                    //$('#challengesNavbarList').listview('refresh');
-                });
-                $("#myTeamPage").bind('pagebeforeshow', function(event){
-                    $('#chatMessageList').listview('refresh');
-                });
-                
-                $("#popupPanel").on({
-                    popupbeforeposition: function(){
-                        var h = $(window).height();
-                        
-                        $("#popupPanel").css("height", h);
-                    }
-                });
-                
             });
             
         </script>
@@ -159,7 +149,7 @@
                             <span data-bind='css: status, text: summary'></span>
                         </p>
                         <form data-bind='attr: { id: "challengeForm" + pk() }' class='form-horizontal' method='post'>
-                            <input data-bind='value: pk' type='hidden' name='activity_id' /><input type='hidden' name='participant_group_id' value='1005' /><a href="#" data-role="button" data-inline="true" data-bind='css: status, click: $root.perform'><span data-bind='if: availableNow'>Perform</span><span data-bind='if: completed'>Completed <span class='icon-check'></span></span><span data-bind='if: expired'>Expired <span class='icon-warning-sign'></span></span><span data-bind='if: upcoming'>Not yet available <span class='icon-time'></span></span><span data-bind='if: locked'>Locked <span class='icon-lock'></span></span></a>
+                            <input data-bind='value: pk' type='hidden' name='activity_id' /><input type='hidden' name='participant_group_id' value='{{participant_group_relationship.id}}' /><a href="#" data-role="button" data-inline="true" data-bind='css: status, click: $root.perform'><span data-bind='if: availableNow'>Perform</span><span data-bind='if: completed'>Completed <span class='icon-check'></span></span><span data-bind='if: expired'>Expired <span class='icon-warning-sign'></span></span><span data-bind='if: upcoming'>Not yet available <span class='icon-time'></span></span><span data-bind='if: locked'>Locked <span class='icon-lock'></span></span></a>
                         </form>
                     </div>
                     <div style='margin-top: 10px; padding: 15px 0;' class='span2'>
@@ -189,10 +179,10 @@
     </script>
     </head>
     <body>
-    	 <!-- /pageloginPage--><!-- Start of #dashboardPage -->
+    	<!-- Start of #dashboardPage -->
         <div data-role="page" id="dashboardPage" class="ui-responsive-panel">
             <!-- defaultpanel  -->
-            <div data-role="panel" id="defaultpanel" data-theme="b">
+            <div data-role="panel" id="defaultpanel" data-theme="b" data-position="left" data-display="overlay" data-dismissible="true" >
                 <a href="#" data-theme="c" data-role="button" class="innerbutton"><h2><span class="icon-gauge"></span> Dashboard</h2></a>
                 <a href="#challengesPage" data-theme="c" data-role="button" class="innerbutton"><h2><span class="icon-star"></span> Challenges</h2></a>
                 <a href="#myTeamPage" data-theme="c" data-role="button" class="innerbutton"><h2><span class="icon-user"></span> My Team</h2></a>
@@ -297,7 +287,7 @@
                     </div>
                 </div>
             </div>
-             <div data-role="footer" data-position="fixed" data-theme="c">
+             <div data-role="footer" data-theme="c">
                 <div class="ui-bar-b" style="font-size:15px;text-align:center;">
                     <div data-role="controlgroup" data-type="horizontal" data-theme="b">
                         <a href="#" data-theme="b"> Dashboard</a>
@@ -315,7 +305,7 @@
         </div>
         <!-- /page dashboardPage--><!-- Start of #dashboardLockedChallengePage -->
         <div data-role="page" id="dashboardLockedChallengePage" class="ui-responsive-panel">
-            <div data-role="panel" id="defaultpanel" data-theme="b">
+            <div data-role="panel" id="defaultpanel" data-theme="b" data-position="left" data-display="overlay" data-dismissible="true" >
                 <a href="#" data-theme="c" data-role="button" class="innerbutton"><h2><span class="icon-gauge"></span> Dashboard</h2></a>
                 <a href="#challengesPage" data-theme="c" data-role="button" class="innerbutton"><h2><span class="icon-star"></span> Challenges</h2></a>
                 <a href="#myTeamPage" data-theme="c" data-role="button" class="innerbutton"><h2><span class="icon-user"></span> My Team</h2></a>
@@ -425,7 +415,7 @@
                     </div>
                 </div>
             </div>
-            <div data-role="footer" data-position="fixed" data-theme="c">
+            <div data-role="footer" data-theme="c">
                 <div class="ui-bar-b" style="font-size:15px;text-align:center;">
                     <div data-role="controlgroup" data-type="horizontal" data-theme="b">
                         <a href="#" data-theme="b"> Dashboard</a>
@@ -443,7 +433,7 @@
         </div>
         <!-- /page dashboardLockedChallengePage--><!-- Start of first page: #challengesPage -->
 		<div data-role="page" id="challengesPage" class="ui-responsive-panel">
-            <div data-role="panel" id="defaultpanel" data-theme="b">
+            <div data-role="panel" id="defaultpanel" data-theme="b" data-position="left" data-display="overlay" data-dismissible="true" >
                 <a href="#dashboardPage" data-theme="c" data-role="button" class="innerbutton"><h2><span class="icon-gauge"></span> Dashboard</h2></a>
                 <a href="#" data-theme="c" data-role="button" class="innerbutton"><h2><span class="icon-star"></span> Challenges</h2></a>
                 <a href="#myTeamPage" data-theme="c" data-role="button" class="innerbutton"><h2><span class="icon-user"></span> My Team</h2></a>
@@ -472,7 +462,7 @@
                     </div>
                 </div>
             </div>
-            <div data-role="footer" data-position="fixed" data-theme="c">
+            <div data-role="footer" data-theme="c">
                 <div class="ui-bar-b" style="font-size:15px;text-align:center;">
                     <div data-role="controlgroup" data-type="horizontal" data-theme="b">
                         <a href="#dashboardPage" data-theme="b"> Dashboard</a>
@@ -490,7 +480,7 @@
         </div>
         <!-- /page challengesPage--><!-- Start of #lockedChallengePage -->
         <div data-role="page" id="lockedChallengePage" class="ui-responsive-panel">
-            <div data-role="panel" id="defaultpanel" data-theme="b">
+            <div data-role="panel" id="defaultpanel" data-theme="b" data-position="left" data-display="overlay" data-dismissible="true" >
                 <a href="#dashboardPage" data-theme="c" data-role="button" class="innerbutton"><h2><span class="icon-gauge"></span>Dashboard</h2></a>
                 <a href="#" data-theme="c" data-role="button" class="innerbutton"><h2><span class="icon-star"></span>Challenges</h2></a>
                 <a href="#myTeamPage" data-theme="c" data-role="button" class="innerbutton"><h2><span class="icon-user"></span>My Team</h2></a>
@@ -524,7 +514,7 @@
                     </div>
                 </div>
             </div>
-            <div data-role="footer" data-position="fixed" data-theme="c">
+            <div data-role="footer" data-theme="c">
                 <div class="ui-bar-b" style="font-size:15px;text-align:center;">
                     <div data-role="controlgroup" data-type="horizontal" data-theme="b">
                         <a href="#dashboardPage" data-theme="b"> Dashboard</a>
@@ -542,7 +532,7 @@
         </div>
         <!-- /page lockedChallengePage--><!-- Start of page: #myTeamPage -->
         <div data-role="page" id="myTeamPage" class="ui-responsive-panel">
-            <div data-role="panel" id="defaultpanel" data-theme="b">
+            <div data-role="panel" id="defaultpanel" data-theme="b" data-position="left" data-display="overlay" data-dismissible="true" >
                 <a href="#dashboardPage" data-theme="c" data-role="button" class="innerbutton"><h2><span class="icon-gauge"></span> Dashboard</h2></a>
                 <a href="#challengesPage" data-theme="c" data-role="button" class="innerbutton"><h2><span class="icon-star"></span> Challenges</h2></a>
                 <a href="#" data-theme="c" data-role="button" class="innerbutton"><h2><span class="icon-user"></span> My Team</h2></a>
@@ -573,12 +563,12 @@
                     </div>
                     <form id="chat-form">
                         <div data-role="fieldcontain" class="innerblock">
-                            <input type="hidden" name="participant_group_id" value="1005"><input type="text" id="chatText" name="message" placeholder="Send a message to your group">
+                            <input type="hidden" name="participant_group_id" value='{{participant_group_relationship.id}}'><input type="text" id="chatText" name="message" placeholder="Send a message to your group">
                         </div><a href="#" data-role="button" id="submitChatMessage" type="submit">Send</a>
                     </form>
                 </div>
             </div>
-            <div data-role="footer" data-position="fixed" data-theme="c">
+            <div data-role="footer" data-theme="c">
                 <div class="ui-bar-b" style="font-size:15px;text-align:center;">
                     <div data-role="controlgroup" data-type="horizontal" data-theme="b">
                         <a href="#dashboardPage" data-theme="b"> Dashboard</a>
@@ -596,7 +586,7 @@
         </div>
         <!-- /page myTeamPage--><!-- Start of page: #helpPage -->
 		 <div data-role="page" id="helpPage" class="ui-responsive-panel">
-            <div data-role="panel" id="defaultpanel" data-theme="b">
+            <div data-role="panel" id="defaultpanel" data-theme="b" data-position="left" data-display="overlay" data-dismissible="true" >
                 <a href="#dashboardPage" data-theme="c" data-role="button" class="innerbutton"><h2><span class="icon-gauge"></span> Dashboard</h2></a>
                 <a href="#challengesPage" data-theme="c" data-role="button" class="innerbutton"><h2><span class="icon-star"></span> Challenges</h2></a>
                 <a href="#myTeamPage" data-theme="c" data-role="button" class="innerbutton"><h2><span class="icon-user"></span> My Team</h2></a>
@@ -677,7 +667,7 @@
                     </ul>
                 </div>
             </div>
-            <div data-role="footer" data-position="fixed" data-theme="c">
+            <div data-role="footer" data-theme="c">
                 <div class="ui-bar-b" style="font-size:15px;text-align:center;">
                     <div data-role="controlgroup" data-type="horizontal" data-theme="b">
                         <a href="#dashboardPage" data-theme="b"> Dashboard</a>
@@ -695,7 +685,7 @@
         </div>
         <!-- /page helpPage--><!-- Start of page: #modalPage -->
         <div data-role="page" id="modalPage" data-close-btn="right">
-            <div data-role="header">
+            <div data-role="header" data-theme="b">
                 <h1></h1>
             </div>
             <div data-role="content">
